# lihtc-geocodings-comparison

./: LICENSE  README.md  pyproject.toml
src/notebooks/: 100_convert_to_duckdb.ipynb  201_geocode_census.ipynb  300_comparisons.ipynb
