[tool.poetry]
name = "redo-lihtc"
version = "0.1.0"
description = ""
authors = ["Kevin Wilson <khwilson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.1"
duckdb = "^0.5.1"
jupyter = "^1.0.0"
openpyxl = "^3.0.10"
censusgeocode = "^0.5.2"
tqdm = "^4.64.1"
geopandas = "^0.12.0"
pyarrow = "^10.0.0"
matplotlib = "^3.6.1"
Rtree = "^1.0.1"

[tool.poetry.dev-dependencies]
nbqa = "^1.5.3"
isort = "^5.10.1"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
